# pydantic-serializable

examples/user-info-example/: main.py  pyproject.toml
pydantic_serializable/: serializable.py
